--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ html, body{
 .header{
     width: 100%;
     height: 100vh;
-    background-image: url('/img/s3.png');
+    background-image: url('./img/s3.png');
     background-position: left left;
     background-repeat: no-repeat;
     background-size:cover ;
